fix: Changer la couleur des liens du menu mobile en bleu marine pour améliorer la visibilité

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -164,6 +164,11 @@
     visibility: visible;
   }
 
+  .navbar-links.open .navbar-link {
+    color: #04203d;
+    font-weight: 600;
+  }
+
   .navbar-link.login {
     margin-left: 0;
   }
